--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-qrcode-logo": "^4.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "socket.io-client": "^4.8.1"
